# zxj123

./: .gitignore  README.md  REFACTOR_NOTES.md  main_ui_optimized (4).py  pyproject.toml  requirements.txt
adapters/: __init__.py
adapters/bacnet/: __init__.py  base.py
adapters/modbus/: __init__.py  base.py
adapters/mqtt/: __init__.py  base.py
core/: __init__.py  config.py  economics.py  history.py
core/control/: __init__.py  control_chain.py  low_sensor_mode.py  strategies.py
core/optimizer/: __init__.py  chiller_group.py
core/physics/: __init__.py  hydraulic.py  simulation_engine.py  terminal_linkage.py  thermal.py
core/prediction/: __init__.py
core/reporting/: __init__.py  llm_client.py  report_agent.py
core/safety/: __init__.py  supervisor.py
core/simulation/: __init__.py  engine.py
data/: __init__.py
data/configs/: __init__.py  defaults.py  llm_providers.py
data/history/: __init__.py
data/sensors/: __init__.py
legacy/: __init__.py  main_ui_legacy.py
models/: __init__.py  equipment.py  load_predictor.py
models/saved/: __init__.py  load_forecast_lr.joblib  load_forecast_lr.metadata.json
prediction/: __init__.py  load_forecast_service.py
services/: __init__.py  control_service.py  optimization_service.py  reporting_service.py  simulation_service.py
tests/: __init__.py  test_chiller_optimizer.py  test_control_chain.py  test_engine_safety_integration.py  test_load_forecast.py  test_low_sensor_mode.py  test_mpc_strategy.py  test_no_llm_in_control.py  test_no_llm_in_control_v2.py  test_physics_thermal.py  test_safety_supervisor.py  test_services.py  test_skeleton.py  test_ui_decoupling.py
train/: __init__.py  feature_engineering.py  model_export.py  training_pipeline.py
train/datasets/: __init__.py
ui/: __init__.py
ui/charts/: __init__.py
ui/controls/: __init__.py
ui/dashboard/: __init__.py  main_window.py
utils/: __init__.py  logging.py  paths.py
