[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hvac_chiller_plant"
version = "0.1.0"
description = "HVAC chiller-plant supervisory control and simulation platform."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "core*",
    "services*",
    "models*",
    "adapters*",
    "ui*",
    "data*",
    "train*",
    "prediction*",
    "utils*",
]
exclude = ["legacy*", "tests*"]

[tool.ruff]
line-length = 110
select = ["E", "F", "I", "UP"]
